# interactive-learning

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  init_db.py  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: chat_agent.py  html_generator.py  llm_provider.py  rag_agent.py  research_agent.py
backend/app/api/: billing.py  chat.py  projects.py  uploads.py
backend/app/auth/: firebase.py
backend/app/db/: models.py  session.py
backend/app/storage/: s3.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/auth/: AuthPage.tsx
frontend/src/components/chat/: ChatView.tsx
frontend/src/components/interactive/: InteractiveOutput.tsx
frontend/src/components/layout/: Dashboard.tsx
frontend/src/lib/: api.ts  firebase.ts  store.ts
